2004-01-16  Jackson Harper <jackson@ximian.com>

	* TagAttribute.cs: attributes can be stored as encoded html so we
	decode them here.
	
2004-01-14  Jackson Harper <jackson@ximian.com>

	* TemplateControlCompiler.cs: Is a user control is cached and
	shared use the controls type hashcode for the GUID so it will be
	the same across instances.
	
2004-01-13  Jackson Harper <jackson@ximian.com>
	
	* TemplateControlCompiler.cs: If an item has the partial caching
	attribute build a PartialCachingControl in the parents __Build method.
	* BaseCompiler.cs: Add a method for adding class attributes to the
	class.
	* UserControlCompiler.cs: If caching is enabled on a user control
	add the PartialCachingAttribute to it.
	
2004-01-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* PageCompiler.cs: invoke Request.ValidateInput if required.

2004-01-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: don't rely on GC to close the files parsed. Fixes bug
	#52521. Patch by liyul@hotmail.com.

2003-12-25  Jackson Harper <jackson@ximian.com>

	* AspGenerator.cs: Allow scriptlets in javascript. This fixes bug
	#52522.
	
2003-12-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* PageCompiler.cs: assign the ErrorPage property if provided.

2003-12-15  Jackson Harper <jackson@ximian.com>

	* PageCompiler.cs: Add Trace and TraceMode to framework initialize
	method if they are set.
	
2003-12-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: ignore <tbody> when we're inside a server table and
	fail when runat="server" is applied to <tbody> with a parse error
	instead of waiting for a compilation error. Fixes bug #52157.

2003-12-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: basic checking of ID validity.  Throw a
	ParseException when mixing languages.

2003-11-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* PageCompiler.cs: assign LCID, Culture and/or UICulture in
	FrameworInitialize() if provided in @Page.
