@@ -1,3 +1,8 @@
+2004-01-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* TemplateControlCompiler.cs: allow handling subproperties for other
+	types than Style and Font. Fixes bug #53217.
+
 2004-01-16  Jackson Harper <jackson@ximian.com>
 
 	* TagAttribute.cs: attributes can be stored as encoded html so we
